# rental_contract_rag

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  health_check.py  pyproject.toml  setup.py
.github/workflows/: ci-cd.yml  ci.yml  python-test-and-linter.yml
exploration/: rental_contract_rag_exploration.ipynb
src/: app.py  config.py  contract_loader.py  data_loading.py  first_file.py  indexing.py  rag.py
src/exploration/: rental_contract_rag_exploration.ipynb
src/services/: file_service.py  validatation_service.py  validation_service.py
src/ui/: callbacks.py  components.py  contracts.py  layout.py
tests/: test_app.py  test_contract_loading.py  test_data_loading.py  test_indexing.py  test_rag.py
