[tool.poetry]
name = "rental-contract-rag"
version = "0.1.0"
description = "A project to explore if an app that analyzes and answer questions about rental contract"
authors = ["Martin Hallberg <88983960+MartinJHallberg@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pandas = "^2.3.2"
ipykernel = "^6.30.1"
langchain = "^0.3.27"
pypdf = "^6.0.0"
langchain-community = "^0.3.27"
langchain-huggingface = "^0.3.1"
sentence-transformers = "^5.1.0"
langchain-openai = "^0.3.31"
pdfplumber = "^0.11.7"
pymupdf = "^1.26.4"
pdf2image = "^1.17.0"
pytesseract = "^0.3.13"
pytest = "^8.4.2"
ruff = "^0.12.12"
chromadb = "^1.0.20"
langchain-chroma = "^0.2.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]