[tool.poetry]
name = "rental-contract-rag"
version = "0.1.0"
description = "A project to explore if an app that analyzes and answer questions about rental contract"
authors = ["Martin Hallberg <88983960+MartinJHallberg@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
# Production dependencies only
langchain = "^0.3.27"
langchain-community = "^0.3.27"
langchain-openai = "^0.3.31"
pdf2image = "^1.17.0"
pytesseract = "^0.3.13"
chromadb = "^1.0.20"
langchain-chroma = "^0.2.5"
dash = "^3.2.0"
dash-bootstrap-components = "^2.0.4"

[tool.poetry.group.dev.dependencies]
# Development only dependencies
ipykernel = "^6.30.1"
pytest = "^8.4.2"
ruff = "^0.12.12"
jupyter = "^1.0.0"  # If you use notebooks
pypdf = "^6.0.0"

[tool.poetry.group.test.dependencies]
# Testing dependencies
pytest = "^8.4.2"
pytest-cov = "^4.0.0"
pytest-mock = "^3.12.0"

[tool.poetry.group.lint.dependencies]
# Linting and formatting
ruff = "^0.12.12"
black = "^23.0.0"
mypy = "^1.8.0"

[tool.poetry.group.optional.dependencies]
# Optional dependencies for advanced features
langchain-huggingface = "^0.3.1"  # Only if using HuggingFace models

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]